--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,18 @@
     transform: rotate(360deg);
   }
 }
+
+*{
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  scroll-behavior: smooth;
+}
+
+body{
+  min-height: 100vh;
+  width: 100%;
+  background-color: #0e0d0b;
+  display: flex;
+  flex-direction: column;
+}
